--- a/taller_criptografia_solved.ipynb
+++ b/taller_criptografia_solved.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "## Paso 2 \n",
     "\n",
-    "A continuación deberás completar la función `alice_prepare_qubit` que crea una lista `qubit`, donde cada elemento reresenta el qubit que es enviado por alice. Las entradas de esta función son `bits` correspondientes a los bits que codifica Alice y `bases`, con la cadena de bits con que Alice prepara las bases.\n",
+    "A continuación deberás completar la función `alice_prepare_qubit` que crea una lista `qubit`, donde cada elemento es un circuito representando el qubit que es enviado por alice. Las entradas de esta función son `bits` correspondientes a los bits que codifica Alice y `bases`, con la cadena de bits con que Alice prepara las bases.\n",
     "\n",
     "**HINT:** Recuerda que si el bit en `alice_bases` es `0`, implica preparar el estado en la base $Z$, mientras que si es `1`, Alice prepara el estado en la base $X$."
    ]
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora deberás completar la función `measure_qubit` que aplica la medida de Bob y simula el resultado de cada qubit. "
+    "Ahora deberás completar la función `measure_qubit` que aplica la medida de Bob a través de una simulación y almacena los resultados en la lista `measurements`. "
    ]
   },
   {
@@ -275,6 +275,13 @@
    "outputs": [],
    "source": [
     "def measure_qubit(circuit, bases):\n",
+    "    '''\n",
+    "    Inputs:\n",
+    "        circuit (list) : contains the qubits sent by Alice\n",
+    "        bases (list): bit string b tilde\n",
+    "    Outputs:\n",
+    "        measurements (list): bit string k tilde\n",
+    "    '''\n",
     "    measurements = []\n",
     "# ------------------------------------------------\n",
     "    for i in range(n):\n",
@@ -296,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al aplicar la función, obtenmos el siguiente circuito"
+    "Al aplicar la función, obtenemos el siguiente circuito"
    ]
   },
   {
@@ -369,6 +376,14 @@
    "outputs": [],
    "source": [
     "def remove_garbage(alice_bases, bob_bases, bits):\n",
+    "    '''\n",
+    "    Inputs:\n",
+    "        alice_bases (list) : bit string b\n",
+    "        bob_bases   (list) : bit string b tilde\n",
+    "        bits        (list) : bits that we keep or discard\n",
+    "    Outputs:\n",
+    "        good_bits (list): contains the bits we keep\n",
+    "    '''\n",
     "    good_bits = []\n",
     "#--------------------------------------------------------\n",
     "    for i in range(n):\n",
@@ -424,6 +439,13 @@
    "outputs": [],
    "source": [
     "def sample_bits(bits, selection):\n",
+    "    '''\n",
+    "    Inputs:\n",
+    "        bits      (list) : bit string\n",
+    "        selection (list) : bits that we select from the list \"bits\"\n",
+    "    Outputs:\n",
+    "        sample    (list) : sample bits to compare\n",
+    "    '''\n",
     "    sample = []\n",
     "    for i in selection:\n",
     "        # usamos np.mod para asegurarnos que el bit que escibimos siempre\n",
@@ -549,7 +571,7 @@
     "np.random.seed(seed=3)\n",
     "alice_bits = randint(2, size= n)\n",
     "alice_bases = randint(2, size= n)\n",
-    "protocol = alice_prepare_qubit(alice_bits, alice_bases)"
+    "protocol2 = alice_prepare_qubit(alice_bits, alice_bases)"
    ]
   },
   {
@@ -577,7 +599,7 @@
     }
    ],
    "source": [
-    "protocol[0].draw(output=\"mpl\")"
+    "protocol2[0].draw(output=\"mpl\")"
    ]
   },
   {
@@ -758,15 +780,15 @@
     "\n",
     "# **Análisis del Riesgo**\n",
     "\n",
-    "Para este tipo de intercepción, en el cual Eve mide todos los qubits, hay una pequeña posibilidad de que la muestra (sample) de Alice y Bob coincidad, y que Alice envié su mensaje con la presencia del espía malicioso, Eve. Vamos a calculas esta posibilidad y ver cuán arriesgado es hacer distribución de claves cuánticas.\n",
+    "Para este tipo de intercepción, en el cual Eve mide todos los qubits, hay una pequeña posibilidad de que la muestra (sample) de Alice y Bob coincidad, y que Alice envié su mensaje con la presencia del espía malicioso, Eve. Vamos a calcular esta posibilidad y ver cuán arriesgado es hacer distribución de claves cuánticas.\n",
     "\n",
     "                    IMAGEN\n",
     "\n",
-    "Si Alice y Bob utilizan 1 bit para la muestra, la probabildad de que sus claves coincidan en presencia de un espía es igual a 0.75. Si comparan 2 bits, la probabilidad decrece a $0.75^2 = 0.5625$. Podemos ver que la probabilidad de que Eve pase desapercibida decrece a medida que Alice y Bob aumentan el largo de su muestra, tal que\n",
+    "Si Alice y Bob utilizan 1 bit para la muestra, la probabildad de que sus claves coincidan en presencia de un espía es igual a $0.75$. Si comparan 2 bits, la probabilidad decrece a $0.75^2 = 0.5625$. Podemos ver que la probabilidad de que Eve pase desapercibida decrece a medida que Alice y Bob aumentan el largo de su muestra, tal que\n",
     "\n",
-    "$ P_\\text{indetectada} = 0.75^m$\n",
+    "$ P_\\text{indetectada} = 0.75^f$\n",
     "\n",
-    "donde $m$ es el largo de la muestra.\n",
+    "donde $f$ es el largo de la muestra.\n",
     "\n",
     "Si decidimos comparar 15 bits como hicimos anteriormente, hay un $1.3\\%$ de posibilidades de que Eve no sea detectada. Si esto nos parece demasiado arriesgado, podríamos comparar 50 bits en su lugar, y tendríamos un $0.00006\\%$ de posibilidades de ser espiados sin saberlo."
    ]
