--- a/taller_criptografia_SHORT.ipynb
+++ b/taller_criptografia_SHORT.ipynb
@@ -171,9 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paso 4\n",
-    "\n",
-    "Alice hace público las bases en que codificó sus qubits y Bob revela en qué base los midió. Deberás completar la función `remove_garbage` que descartará los bits cuando no se cumple $b_i = \\tilde{b}_i$. En el caso que la última condición sí se cumpla, deberás añadir los bits a la lista `good_bits`"
+    "## Paso 4"
    ]
   },
   {
@@ -227,9 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paso 5 \n",
-    "\n",
-    "Parte de la clave secreta de Alice y Bob se utilizan para verificar si comparten la misma cadena de bits. Para hacer esta comparación, utilizamos la función `sample_bits` con la que extraemos aleatoriamente un número de bits de la clave, que indicamos en `selection`"
+    "## Paso 5 "
    ]
   },
   {
@@ -343,9 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paso 3\n",
-    "\n",
-    "Eve genera un qubit en su base y se lo envía a Bob para que lo mida. En este caso, Bob eligió (por casualidad) medir con la misma base en la que Alice preparó el qubit. Sin la intervención de Eve, se garantizaría que Bob mide 0, pero debido a que Eve intentó leer el mensaje, ahora tiene un $50 \\% $ de probabilidades de medir 1."
+    "## Paso 3"
    ]
   },
   {
@@ -429,6 +423,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Encriptación del Mensaje**\n",
+    "\n",
+    "Una vez que la clave fue distribuida, Alice puede encriptar su mensaje usando la técnica one-time pad: ella simplemente suma los bits de la clave con los que ella quiere enviar. Por lo que si ella posee una clave $c$ y su mensaje lo codifica en una cadena de bits $m$, el mensaje encriptado será $e = m \\oplus c \\; \\text{mod} \\; 2$. Bob podrá desencriptar el mensaje añadiendo su clave al mensaje encriptado, tal que $m = e \\oplus c \\; \\text{mod} \\; 2$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -462,15 +465,6 @@
     "    print(\"La interferencia de Eve fue detectada.\")\n",
     "else:\n",
     "    print(\"Eve no fue detectada\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **Encriptación del Mensaje**\n",
-    "\n",
-    "Una vez que la clave fue distribuida, Alice puede encriptar su mensaje usando la técnica one-time pad: ella simplemente suma los bits de la clave con los que ella quiere enviar. Por lo que si ella posee una clave $c$ y su mensaje lo codifica en una cadena de bits $m$, el mensaje encriptado será $e = m \\oplus c \\; \\text{mod} \\; 2$. Bob podrá desencriptar el mensaje añadiendo su clave al mensaje encriptado, tal que $m = e \\oplus c \\; \\text{mod} \\; 2$."
    ]
   },
   {
